--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,7 @@
-<p>Hello <%= @resource.email %>!</p>
+<p>Olá, <%= @resource.name %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
+<p>Alguém solicitou um link para a alteração da sua senha. Você pode realizar a alteração pelo link abaixo.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<p><%= link_to 'Mude sua senha', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p>Caso não a tenha solicitado, por favor ignore este email.</p>
+<p>Sua senha não será alterada até que você acesse o link acima e crie uma nova.</p>
