--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,40 @@
-<h2>Change your password</h2>
+<div class="row">
+  <div class="col s12 m12 l5 fill">
+    <div class="container center c1">
+      <%= image_tag 'logo4', class: 'responsive-img custom-image' %>
+      <p class="description">Altere sua senha</p>
+      <div class="row"></div>
+      <div class="row"></div>
+      <div class="row"></div>
+      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.hidden_field :reset_password_token %>
+      <div class="row">
+        <div class="input-field z-depth-1 custom-field">
+          <%= f.password_field :password, autocomplete: 'off', autofocus: true, class: 'validate', placeholder: 'Nova Senha', required: true %>
+          <span class="helper-text" data-error="Senha inválida"></span>
+        </div>
 
-<%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
-  <%= f.hidden_field :reset_password_token %>
+        <div class="row"></div>
 
-  <div class="field">
-    <%= f.label :password, "New password" %><br />
-    <% if @minimum_password_length %>
-      <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-    <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: "new-password" %>
+        <div class="input-field z-depth-1 custom-field">
+          <%= f.password_field :password_confirmation, autocomplete: "off", class: 'validate', placeholder: 'Confirmação', required: 'true' %>
+          <span class="helper-text" data-error="Senha inválida"></span>
+        </div>
+
+        <%= f.submit "Alterar", class: 'btn center blue theme custom-button', value: 'Alterar' %>
+        <% end %>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div class="col l7 hide-on-med-and-down blue theme fill valign-wrapper">
+    <div class="container c2">
+      <div class="row center">
+        <%= image_tag 'logo4', class: 'responsive-img custom-image' %>
+        <h5 class="white-text">Junte-se aos seus colegas<h5>
+      </div>
+      <div class="row center">
+          <%= image_tag 'group_chat', class: 'responsive-img' %>
+      </div>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Change my password" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
